--- a/accordion.css
+++ b/accordion.css
@@ -191,6 +191,17 @@ css-doodle.voting {
     );
   }
 
+.voting {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Peu-Peu-Mox-Mox_of_the_Nez_Perce_Tribe_1908_Benjamin_Gifford.jpg/1200px-Peu-Peu-Mox-Mox_of_the_Nez_Perce_Tribe_1908_Benjamin_Gifford.jpg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: top;
+    background-size: cover;
+    /* opacity: 0.3; */
+  }
+
+
+
 css-doodle.housing {
     --rule: ( :doodle {
       position: absolute;
