--- a/accordion.css
+++ b/accordion.css
@@ -191,7 +191,7 @@ css-doodle.voting {
     );
   }
 
-.voting {
+.doting {
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/97/Peu-Peu-Mox-Mox_of_the_Nez_Perce_Tribe_1908_Benjamin_Gifford.jpg/1200px-Peu-Peu-Mox-Mox_of_the_Nez_Perce_Tribe_1908_Benjamin_Gifford.jpg);
     background-repeat: no-repeat;
     background-position-x: center;
