--- a/accordion.css
+++ b/accordion.css
@@ -322,12 +322,10 @@ css-doodle.education {
     );
   }
 
-
-article.play {
+article.standard {
   position: relative;
   margin: 0;
   padding: 0;
-  height: 35vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -336,6 +334,9 @@ article.play {
   background-color: white;
   background: linear-gradient(to bottom, hsl(28deg 8% 73%) 20%, hsl(0deg 0% 3%) 100%);
   overflow: hidden;
+}
+article.play {
+  height: 35vh;
   }
   
 article.play h2 {
